--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+autopep8==1.5
 click==7.1.1
+ecdsa==0.15
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-SQLAlchemy==2.4.1
@@ -6,6 +8,10 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 psycopg2==2.8.4
+pyasn1==0.4.8
+pycodestyle==2.5.0
+python-jose==3.1.0
+rsa==4.0
 six==1.14.0
 SQLAlchemy==1.3.15
 Werkzeug==1.0.0
